fixes animations on safari

--- a/SlideMenu/WebContent/VAADIN/themes/slidemenu/slidemenu.scss
+++ b/SlideMenu/WebContent/VAADIN/themes/slidemenu/slidemenu.scss
@@ -33,8 +33,14 @@
 			overflow: hidden;
 		}
 		
-  		transition: transform 500ms;
+  		-webkit-transition: -webkit-transform 500ms;
   		
+  		
+  		transition: transform 500ms;
+		transition-delay: 0;
+  		
+  		-webkit-transform: translate(0, 0);
+  		transform: translate(0, 0);
   		
   		.menubutton {
   		
@@ -57,6 +63,7 @@
 	}
 	
 	.slidemenu.opening {
+		-webkit-transform: translate(100%, 0);
 		transform: translate3d(100%, 0,0);
 	}
 	
